Added css to elements
Signed-off-by: ishitag22 <ishitagaur4@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
@@ -61,18 +62,34 @@
                     <div class="social_icons">
                         <div class="icon_circle"></div>
                         <a href="#" target="_blank" style="text-decoration: none;" rel="noopenner norefrrer">
-                        <i class="fa-brands fa linkedin-in"></i></a>
+                        <i class="fa-brands fa-linkedin-in icon"></i>
+                    </a>
                         <a href="#" target="_blank" style="text-decoration: none;" rel="noopenner norefrrer">
-                            <i class="fa-brands fa linkedin-in"></i></a>
-                        <a href="#" target="_blank" style="text-decoration: none;" rel="noopenner norefrrer">
-                            <i class="fa-brands fa linkedin-in"></i></a>
-                        <a href="#" target="_blank" style="text-decoration: none;" rel="noopenner norefrrer">
-                            <i class="fa-brands fa linkedin-in"></i></a>
-                        </div>
+                        <i class="fa-brands fa-github icon"></i>
+                    </a>
+                </div>
+                <div class="hero_btn">
+                    <button class="btn_1">Hire me</button>
+                    <button class="btn_2"><a href="#">Download Resume</a></button>
+                </div>
                     </div>
                 </div>
             </div>
         </main>
+        <div class="image">
+            <img src="" alt="" class="bg">
+            <img src="" alt="" class="girl">
+        </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.js"></script>
+    <script>
+        var typingEffect= new Typed(".multiText",{
+            strings: ["Android Developer","Coder"],
+            loop: true,
+            typeSpeed: 100,
+            backSpeed: 80,
+            backDelay: 2000,
+        })
+    </script>
 </body>
 </html>
