Added profile photo
Signed-off-by: ishitag22 <ishitagaur4@gmail.com>

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                         <i class="fa fa-moon" id="moon"></i>
                         <i class="fa fa-sun" id="sun"></i>
                     </div>
-                    <div class="nav_menu_btn">
-                        <i class="fa fa-bars" onclick="myMenuFuction();"></i>
-                    </div>
+                </div>
+                <div class="nav_menu_btn">
+                    <i class="fa fa-bars" onclick="myMenuFuction();"></i>
                 </div>
             </div>
         </nav>
@@ -77,8 +77,8 @@
             </div>
         </main>
         <div class="image">
-            <img src="" alt="" class="bg">
-            <img src="" alt="" class="girl">
+            <img src="img/bg-removebg-preview.png" alt="" class="bg">
+            <img src="img/ishi-removebg-preview.png" alt="" class="girl">
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.js"></script>
